Mon Feb 14 21:21:08 GMT 2005  Olly Betts <olly@survex.com>

	* api/vectortermlist.h: Workaround a shortcoming in Sun's C++
	  compiler.

Mon Feb 14 21:16:05 GMT 2005  Olly Betts <olly@survex.com>

	* PLATFORMS: Results from upgraded sourceforge x86_64 box.

Mon Feb 14 18:36:40 GMT 2005  Olly Betts <olly@survex.com>

	* extra/xapian/queryparser.h: Fixed compilation error.

Mon Feb 14 18:00:12 GMT 2005  Olly Betts <olly@survex.com>

	* extra/xapian/queryparser.h: Added backward compatibility wrapper for
	  old version of QueryParser::set_stemming_options().

Mon Feb 14 17:50:47 GMT 2005  Olly Betts <olly@survex.com>

	* extra/xapian/queryparser.h: Added dummy QueryParser::set_database()
	  (currently it ignores the parameter).

Mon Feb 14 15:34:13 GMT 2005  Olly Betts <olly@survex.com>

	* extra/lemon.c: C90, not C99!

Mon Feb 14 15:20:11 GMT 2005  Olly Betts <olly@survex.com>

	* extra/lemon.c: C, not C++.

Mon Feb 14 05:49:50 GMT 2005  Olly Betts <olly@survex.com>

	* extra/: Tweak lemon so we can avoid generating files in builddir
	  in a VPATH build.

Mon Feb 14 02:44:17 GMT 2005  Olly Betts <olly@survex.com>

	* extra/Makefile.am: Update to reflect lempar.c -> queryparser.lt.

Mon Feb 14 02:25:53 GMT 2005  Olly Betts <olly@survex.com>

	* extra/lempar.c,extra/queryparser.lt: Rename lemon template to .lt
	  which is more sensible than calling it lempar.c and should work
	  with VPATH builds.

Mon Feb 14 02:12:51 GMT 2005  Olly Betts <olly@survex.com>

	* extra/Makefile.am: Fixes for VPATH builds.

Mon Feb 14 01:43:59 GMT 2005  Olly Betts <olly@survex.com>

	* configure.ac: Need to AC_SUBST(CC_FOR_BUILD).

Mon Feb 14 00:19:45 GMT 2005  Olly Betts <olly@survex.com>

	* extra/Makefile.am: Added dependency for building queryparser.h.

Sun Feb 13 23:30:02 GMT 2005  Olly Betts <olly@survex.com>

	* extra/queryparser.cc,extra/queryparser_internal.h,
	  extra/xapian/queryparser.h: Fixed to compile with GCC 3.3.

Sun Feb 13 23:09:15 GMT 2005  Olly Betts <olly@survex.com>
