@@ -32,6 +32,8 @@
 
 using namespace std;
 
+using namespace Xapian;
+
 // Disable debug code lemon adds.
 #define NDEBUG
 
